--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: GW-BASIC: Gee Whiz!
+description: A site all about GW-BASIC ("Gee-Whiz Beginners All-purpose Symbolic Instruction Code); arguably the most wide-used programming environment in history.
